# alssl

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
alssl/: metric.py  utils.py
alssl/al/: train.py  utils.py
alssl/data/: base.py  cifar10.py  cifar100.py  voc2012.py
alssl/data/img_classification/: bloodmnist.py  cifar10.py  cifar100.py  svhn.py  tinyimagenet.py
alssl/model/: base.py  clip.py  dino.py
alssl/strategy/: __init__.py  alssl.py  badge.py  bait.py  base.py  cal.py  cdal.py  coreset.py  entropy.py  random.py  utils.py
alssl/strategy/alssl/: neighbours.py  neighbours_nms.py  neighbours_path.py  umaplike.py  utils.py
notebooks/: cifar10.ipynb
scripts/: cifar10.py  cifar10_cuda.py
train/: config.yaml  example.py  run.py  train_dino_cifar10.py  train_dino_cifar100.py  train_dino_voc2012.py
train/exp0/: train_dino_cifar10.py
